# wind-forecast

./: .coverage  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  COPILOT.md  LICENSE  README.md  config.json  index.html  main.py  pyproject.toml  render.py  render2.py  render_table_from_json.py  windguru.py
.github/: AI_HEADER.txt
.github/workflows/: pages.yml  tests.yml  update-report.yml
docs/: configuration.md
reports/: 2025-10-18_21-41.html  index.html  latest.html
src/windforecast/: __init__.py  cli.py  config.py  forecast.py  logging.py  render.py  schemas.py
src/windforecast/templates/: report.html
tests/: conftest.py  test_cell_visibility.py  test_cli.py  test_config.py  test_config_errors.py  test_forecast.py  test_logging.py  test_render.py  test_render_advanced.py  test_render_chrome.py  test_render_config.py  test_render_expanded_view.py  test_render_image.py  test_render_summary.py  test_spot_visibility.py  test_table_hours.py  test_ui_interactions.py  test_wind_arrows.py
windsectors/: README.md  plot_wind_sectors.py
